--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-redis": "^3.1.0",
     "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.14.0",
+    "express-formidable": "^0.1.3",
     "express-session": "^1.14.0",
     "jade": "^1.11.0",
+    "method-override": "^2.3.6",
     "mongoose": "^4.5.9",
-    "pug": "^2.0.0-beta5"
+    "pug": "^2.0.0-beta5",
+    "redis": "^2.6.2",
+    "socket.io": "^1.4.8"
   }
 }
